--- a/packages/tunes-theme-touch/sass/src/Component.scss
+++ b/packages/tunes-theme-touch/sass/src/Component.scss
@@ -57,8 +57,10 @@ div.selectedvideo {
 }
 
 .preview {
+    padding : 8px;
+
     * {
-        width : 90%;
+        width : 100%;
     }
 
     h1 {
